@@ -22,7 +22,8 @@
 // -----(-)-------------------->-----> [GND]	Pin 2 on the SSD1306 display board
 #define SSD1306_SCL		PB2   // ----> [SCL]	Pin 3 on the SSD1306 display board
 #define SSD1306_SDA		PB0   // ----> [SDA]	Pin 4 on the SSD1306 display board
-#define SSD1306_SA		0x78  // Display IC2 slave address, default 0x78
+
+#define SSD1306_SADDR	0x78  // Display IC2 slave address, default 0x78
 
 // ----------------------------------------------------------------------------
 
@@ -35,7 +36,6 @@
 void ssd1306_init(void);
 void ssd1306_setpos(uint8_t x, uint8_t y);
 void ssd1306_fill4(uint8_t, uint8_t, uint8_t, uint8_t);
-void ssd1306_byte(uint8_t b);
 
 // ============================================================================
 
