@@ -1,6 +1,14 @@
 CHANGES
 
 
+2019-02-10 (nb)
+
+Some refactoring/renaming, minor fixes, optimizations, removed unused functions.
+- Some refactoring (renaming). Minor fixes.
+- Code optimizations for size and speed.
+- Removed unused functions.
+
+
 2019-02-03 (nb)
 
 Added "extern" functions where needed.
